--- a/labs/sdn.adoc
+++ b/labs/sdn.adoc
@@ -1,11 +1,8 @@
-
-== Understanding the Software Defined Network [ESSENTIALS]
-
 === Introduction
 
 This chapter provides a developer-centric view of the fundamentals and capabilities of the SDN (Software Defined Network) that is used within OpenShift for Application connectivity.
 
-If you are not already logged on go to the UI URL at {webConsoleUrl}[{webConsoleUrl}, window="_blank"] and logon as 'userx' (x is the number provided to you) and password openshift. 
+If you are not already logged on go to the UI URL at {{OPENSHIFT_CONSOLE_URL}}[{{OPENSHIFT_CONSOLE_URL}}, window="_blank"] and logon as '{{USER_ID}}' and password openshift. 
 
 === The basics of Service Addressing
 
@@ -19,7 +16,7 @@ Select Home/Projects
 
 Click on ‘Create Project’
 
-For the project name give it networktestx where x is your user number
+For the project name give it networktest_{{USER_ID}}
 
 Display Name and Description are optional
 
@@ -71,7 +68,7 @@ image::sdn-1.png[Both Applications Loaded]
 
 Once the applications have created change the mode from Developer to Administrator using the top left selection point
 
-Click on 'Projects'. Select the networktestx project
+Click on 'Projects'. Select the networktest_{{USER_ID}} project
 
 Click on 'Networking/Services'
 
@@ -128,11 +125,11 @@ TIP: This is where it starts to get interesting. The Service 'name' itself is ex
 
 === Using the Fully Qualified Domain Name for accessing Services
 
-In the Terminal window type (and replace x with your number):
+In the Terminal window type:
 
 [source]
 ----
-curl http://application1.networktestx.svc.cluster.local:8080
+curl http://application1.networktest_{{USER_ID}}.svc.cluster.local:8080
 ----
 
 TIP: And this is the fully qualified version of the Service. by including the namespace/project name we can reach, effectively, any service on the SDN assuming the SDN has been configured to allow that. In this case we are just targeting our own Service from the application Container, now we will try the other application in the namespace.*
@@ -196,7 +193,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
  name: example
- namespace: networktestYOURNUMBERHERE
+ namespace: networktest_{{USER_ID}}
 spec:
  podSelector:
    matchLabels:
@@ -235,7 +232,7 @@ TIP: This shows that the Service is prohibited even from Services in its own nam
 
 Click on 'Projects'
 
-On the triple dot icon on the far right for networktestxx select ‘Delete Project’
+On the triple dot icon on the far right for networktest_{{USER_ID}} select ‘Delete Project’
 
-In the pop-up enter the name of the project (‘networktestxx’ with your number) and hit Delete
+In the pop-up enter the name of the project (‘networktest_{{USER_ID}}’) and hit Delete
 
