--- a/labs/intro.adoc
+++ b/labs/intro.adoc
@@ -1,37 +1,19 @@
-[[intro]]
-
-== Introduction
-
-=== Attendee details
-
-[cols="<.>a,<.>a"]
-|===
-|Name:
-|
-
-
-|User ID (userX):
-|
-
-
-|===
-
 This workshop is designed to introduce Developers to *OpenShift 4* and explain the usage and technologies around it from a developer perspective.
 
-==== What is Openshift
+=== What is Openshift
 
 Red Hat® OpenShift® is a hybrid cloud, enterprise, secure Kubernetes application platform.
 
 OpenShift is an Enterprise strength, secure implementation of the Kubernetes container orchestration project with additional tooling designed to make the lives of Developer and Administrators as easy as possible.
 
-==== Links
+=== Links
 
 * https://www.openshift.com/learn/what-is-openshift[https://www.openshift.com/learn/what-is-openshift, window="_blank"]
 * https://en.wikipedia.org/wiki/OpenShift[https://en.wikipedia.org/wiki/OpenShift, window="_blank"]
 * https://www.openshift.com/products/container-platform[https://www.openshift.com/products/container-platform, window="_blank"]
-* {webConsoleUrl}[{webConsoleUrl}, window="_blank"] (the Web Console URL for the Workshop)
+* {{OPENSHIFT_CONSOLE_URL}}[{{OPENSHIFT_CONSOLE_URL}}, window="_blank"] (the Web Console URL for the Workshop)
 
-==== Contributors
+=== Contributors
 Red Hat UK DSA Team:
 
 * Phil Prosser
