--- a/labs/quarkus.adoc
+++ b/labs/quarkus.adoc
@@ -1,6 +1,3 @@
-:hide-uri-scheme:
-== Introduction to Quarkus on OpenShift [INNOVATION]
-
 Author: Ally Kouao (feedback to akouao@redhat.com)
 
 === Introduction
@@ -17,10 +14,10 @@ You will be prompted to update your account information before proceeding, enter
 
 [source]
 ----
-Username: userXX
-Email: userXX@no-reply.com
-First Name: userXX
-Last Name: userXX
+Username: {{USER_ID}}
+Email: {{USER_ID}}@no-reply.com
+First Name: {{USER_ID}}
+Last Name: {{USER_ID}}
 ----
 
 Once you log in, you will be placed on the Get Started page. It gives you a view of the different projects that you can create create or pre-configure.
@@ -593,11 +590,8 @@ Finally, lets tidy up the cluster now that your introduction to Quarkus is compl
 
 [source]
 ----
-oc delete project quarkus-workshop-XX
+oc delete project quarkus-workshop-{{USER_ID}}
 ----
-
-_where XX is your user ID number.
-
 
 
 
