--- a/labs/rbac.adoc
+++ b/labs/rbac.adoc
@@ -1,13 +1,10 @@
-
-== The RBAC model for Developers [ESSENTIALS]
-
 === Introduction
 
 *This chapter will introduce the attendee to the concepts around the Role Based Access Control model integrated into OpenShift. This will cover the use of Users, Service Accounts and Permissions.*
 
-NOTE: For the majority of this chapter the attendee will need to pair up with another. If the numbers are odd the presenter should fill the gap of the missing attendee - pair the attendees up before the chapter starts and get them to exchange numbers - remember the numbers as MYUSER and PARTNERUSER
+NOTE: For the majority of this chapter the attendee will need to pair up with another. If the numbers are odd the presenter should fill the gap of the missing attendee - pair the attendees up before the chapter starts and get them to exchange numbers - your partner's username, and enter this whererever it says PARTNERUSERNAME below.
 
-If you are not already logged on go to the UI URL {webConsoleUrl}[{webConsoleUrl}, window="_blank"] and logon as 'userx' (x is the number provided to you) and password openshift. 
+If you are not already logged on go to the UI URL {{OPENSHIFT_CONSOLE_URL}}[{{OPENSHIFT_CONSOLE_URL}}, window="_blank"] and logon as '{{USER_ID}}' and password openshift. 
 
 If you do not already have a terminal tab running as defined in the pre-requisites please open one following the instructions in the pre-requisites
 
@@ -17,7 +14,7 @@ In the UI click on 'Home/Projects'
 
 Click on 'Create Project'
 
-For the project name give it rbactestx where x is your user number
+For the project name give it rbactest_{{USER_ID}}
 
 Display Name and Description are optional
 
@@ -67,13 +64,13 @@ Click on User Management/Role Bindings
 
 image::rbac-2.png[Admin Role]
 
-TIP: Note that we have one Role Binding shown at the moment, which is for Admin and applies to a kind of 'user' and a subject name of 'userx'. This is the binding of your user to the administration role within the project.
+TIP: Note that we have one Role Binding shown at the moment, which is for Admin and applies to a kind of 'user' and a subject name of '{{USER_ID}}'. This is the binding of your user to the administration role within the project.
 
 Click on the 'System Role Bindings'
 
 image::rbac-3.png[System Role Bindings]
 
-TIP: Note that with the addition of System Role Bindings to the screen we can now see the three Service Accounts also created. Deployer is part of the system:deployers binding, builder is part of the system:image-builders binding and the group of users under system:serviceaccounts:rbactestx (where x is your number) have the system:image-pullers binding.
+TIP: Note that with the addition of System Role Bindings to the screen we can now see the three Service Accounts also created. Deployer is part of the system:deployers binding, builder is part of the system:image-builders binding and the group of users under system:serviceaccounts:rbactest_{{USER_ID}} have the system:image-pullers binding.
 
 Click on the (CR) admin Role Ref
 
@@ -87,7 +84,7 @@ Click on 'Create Binding'
 
 Set Name to ‘partneraccess’
 
-Select ‘rbactestx’ from the Namespace pulldown; it should be the only one.
+Select ‘rbactest_{{USER_ID}}’ from the Namespace pulldown; it should be the only one.
 
 *As a user with the admin role within the namespace/project you can add other users with role bindings within your project.*
 
@@ -101,13 +98,13 @@ Enter ‘userPARTNERUSER’ for the Subject Name
 
 Click 'Create'
 
-Ensure the partner has done the same with your userx
+Ensure the partner has done the same with your {{USER_ID}}
 
 Click on Home/Projects
 
 *If the partner user has set the role binding appropriately you will now see two projects - your own and the other person's*
 
-Click on the partner’s project (rbactestPARTNERUSER)
+Click on the partner’s project (rbactest_PARTNERUSERNAME)
 
 Change to the Developer view using the top left selection point
 
@@ -123,7 +120,7 @@ Click on the DC rbactest
 
 Using the arrows scale the deployment to 4 pods
 
-Click on 'Home/Projects' and select your project (rbactestMYUSER)
+Click on 'Home/Projects' and select your project (rbactest_{{USER_ID}})
 
 Click on ‘Role Bindings’ in the project overview pane
 
@@ -139,21 +136,21 @@ Click on 'Create Binding'
 
 Set Name to ‘partneraccess’
 
-Choose the ‘rbactestMYUSER’ in the Namespace pulldown
+Choose the ‘rbactest_{{USER_ID}}’ in the Namespace pulldown
 
 Select ‘view’ in the Role Name pull down
 
 Ensure the Subject radiobox is set to ‘User’
 
-In the Subject Name enter the user name for the partner (userPARTNERUSER)
+In the Subject Name enter the user name for the partner
 
 Click Create
 
-Ensure the partner has done the same with your userx
+Ensure the partner has done the same with your {{USER_ID}}
 
 Click on 'Home/Projects'
 
-Select the partner project (rbactestPARTNERUSER)
+Select the partner project (rbactest_PARTNERUSERNAME)
 
 In the Project overview pane click on Role Bindings
 
@@ -169,14 +166,14 @@ NOTE: View access allows you to see the state of objects but NOT to change them.
 
 Click on 'Home/Projects'
 
-In the triple dot menu next to the rbactestPARTNERUSER select ‘Delete Project’
+In the triple dot menu next to the rbactest_PARTNERUSERNAME select ‘Delete Project’
 
-Type ‘rbactestPARTNERUSER’ in the message box and press ‘Delete’
+Type ‘rbactest_PARTNERUSERNAME’ in the message box and press ‘Delete’
 
 NOTE: Note that you cannot delete the other persons project.
 
 Hit Cancel
 
-In the triple dot menu next to your own project (rbactestMYUSER) select ‘Delete Project’
+In the triple dot menu next to your own project (rbactest_{{USER_ID}}) select ‘Delete Project’
 
-Type ‘rbactestMYUSER’ in the message box and press ‘Delete’
+Type ‘rbactest_{{USER_ID}}’ in the message box and press ‘Delete’
